fixed icon responsiveness on mobile (forgot to implement earlier. Also refactored some of the observer script to improve it's reliability on all viewports.

--- a/in_development/static/assets/css/style.css
+++ b/in_development/static/assets/css/style.css
@@ -232,6 +232,7 @@ nav ul a:hover {
   border-top: 1px solid black;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   /* /* background-position: center;  */
   background-attachment: fixed;
 }
@@ -317,7 +318,7 @@ h1 {
 }
 
 #location {
-  scroll-margin-top: 220px;
+  scroll-margin-top: 450px;
 }
 
 h3 {
@@ -373,11 +374,9 @@ h4 {
 }
 
 .image-container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: fit-content;
+  width: fit-content;
+  margin: auto;
 }
 
 .icons {
@@ -620,12 +619,25 @@ footer a:hover {
     margin: 5px 0px;
   }
 
+  .grid-container {
+    display: block;
+  }
+
   .col-1 {
     grid-column: span 2;
   }
 
   .col-2 {
     grid-column: span 2;
+  }
+
+  .image-container {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  }
+
+  .dark-sides,
+  .light-sides {
+    padding: 10px 0px;
   }
 
   footer {
